# manageprojects

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  commands.py  dev-cli.py  mp.py  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.develop.txt  requirements.txt
.github/workflows/: install_python.yml  pytest.yml  setup_python.yml  tests.yml
.run/: Unittests - __all__.run.xml  Unittests --failfast.run.xml  cli.py --help.run.xml  cli.py format-file manageprojects_format_file.py.run.xml  install_python -vv 3.12.run.xml  only DocTests.run.xml  setup_python.py -vv 3.13.run.xml
docs/: README.md  install_python.md  setup_python.md
manageprojects/: __init__.py  __main__.py  cli.py  constants.py  cookiecutter_api.py  cookiecutter_generator.py  cookiecutter_interface.py  cookiecutter_templates.py  data_classes.py  exceptions.py  format_file.py  git.py  install_python.py  install_python_example.sh  log_utils.py  overwrite.py  patching.py  setup_python.py  setup_python_example.sh  subprocess_utils.py  user_config.py
manageprojects/cli/: cli_app.py  dev.py
manageprojects/cli_app/: __init__.py  manage.py  shell_completion.py  update_readme_history.py
manageprojects/cli_dev/: __init__.py  __main__.py  code_style.py  git_hooks.py  packaging.py  shell_completion.py  testing.py  update_readme_history.py
manageprojects/project_templates/minimal-python/: cookiecutter.json
manageprojects/project_templates/minimal-python/{{cookiecutter.package_name}}/: .gitignore  Makefile  README.md  pyproject.toml
manageprojects/project_templates/minimal-python/{{cookiecutter.package_name}}/requirements/: develop.txt  production.in  production.txt
manageprojects/project_templates/minimal-python/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __main__.py
manageprojects/test_utils/: click_cli_utils.py  git_utils.py  import_utils.py  logs.py  project_setup.py  subprocess.py  temp_utils.py
manageprojects/tests/: __init__.py  base.py  docwrite_macros_install_python.py  docwrite_macros_setup_python.py  test_cli.py  test_cli_main_help_1.snapshot.txt  test_cli_start_project_cli_1.snapshot.txt  test_cli_start_project_help_1.snapshot.txt  test_cli_update_project_help_1.snapshot.txt  test_click_cli_utils.py  test_cookiecutter_api.py  test_cookiecutter_generator.py  test_cookiecutter_interface.py  test_cookiecutter_templates.py  test_cookiecutter_templates_pyproject_toml_utils_1.snapshot.txt  test_doc_write.py  test_doctests.py  test_format_file.py  test_git.py  test_git_git_apply_patch_1.snapshot.patch  test_git_git_diff_1.snapshot.patch  test_install_python.py  test_manageprojects.py  test_manageprojects_pyproject_toml_utils_1.snapshot.txt  test_overwrite.py  test_patching.py  test_patching_make_git_diff_1.snapshot.patch  test_project_setup.py  test_readme.py  test_readme_history.py  test_setup_python.py  test_utilities_publish.py  test_utilities_pyproject_toml.py  test_utilities_temp_utils.py  test_version_info.py
manageprojects/tests/fixtures/cookiecutter_simple_template_rev1/: cookiecutter.json
manageprojects/tests/fixtures/cookiecutter_simple_template_rev1/{{cookiecutter.dir_name}}/: {{cookiecutter.file_name}}.py
manageprojects/tests/utilities/: fixtures.py  git_utils.py  temp_utils.py
manageprojects/utilities/: code_style.py  cookiecutter_utils.py  gitignore.py  include_install_python.py  include_setup_python.py  log_utils.py  publish.py  pyproject_toml.py  subprocess_utils.py  temp_path.py  user_config.py  version_info.py
requirements/: develop.in  develop.txt  production.in  production.txt
