[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_description }}"
readme = "README.md"
authors = [{name = '{{ cookiecutter.author_name }}', email = '{{ cookiecutter.author_email }}'}]

[tool.setuptools]
packages = ["{{ cookiecutter.package_name }}"]

[project.scripts]
manageprojects = "{{ cookiecutter.package_name }}.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.flake8]
statistics = "True"
ignore = ["D203" , "W503"]
max-line-length = 119
exclude = '''
    .git,
'''

[tool.pytest.ini_options]
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["apps"]
omit = ["apps/*/tests/*", "apps/*/migrations/*"]
command_line = "-m pytest"

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
